--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -45,57 +45,57 @@
       <ion-grid class="menuHome" #menuHome  >
         <!----------------------------------------------------------GRID FOR PORTRAIT------------------------------------------------------------------------------->
         <ion-row class="homeM">
-          <ion-col col-4  text-center id="study">
+          <ion-col size="4"  text-center id="study">
             <img alt="etudes" src="./assets/img/studies.png" align="middle"   (click)="changePage(studiesPage)"/>
             <p align="center"><b><font color="#002D62" >{{'HOME.ETUDES' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
             <img alt="biblio" src="./assets/img/libraries.png" align="middle"  (click)="changePage(libraryPage)"/> 
             <p align="center"><b><font color="#002D62">{{'HOME.LIBRARY' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
             <img alt="aide" src="./assets/img/support.png" align="middle"   (click)="changePage(helpDeskPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.HELP' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
         <ion-row class="homeM">
-          <ion-col col-4 text-center>
+          <ion-col size="4" text-center>
             <img alt="logo" src="./assets/img/news.png" align="middle"  (click)="changePage(newsPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.NEWS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center >
+          <ion-col size="4"  text-center >
             <img alt="louvinfo" src="./assets/img/events.png" align="middle"   (click)="changePage(eventPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.EVENTS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
             <img alt="sport" src="./assets/img/sports.png" align="middle"  (click)="changePage(sportPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.SPORTS' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
         <ion-row class="homeM">
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
             <img alt="carte" src="./assets/img/map.png" align="middle"  (click)="changePage(mapPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MAP' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
             <img alt="resto" src="./assets/img/resto.png" align="middle" (click)="changePage(restoPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.REST' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4 text-center>
+          <ion-col size="4" text-center>
             <img alt="voiture" src="./assets/img/mobility.png" align="middle"  (click)="changePage(mobilityPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MOBILITY' | translate}}</font></b></p>
           </ion-col>
         </ion-row >
         <ion-row class="homeM">
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
              <img alt="param" src="./assets/img/settings.png" align="middle"  (click)="changePage(paramPage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center>
+          <ion-col size="4"  text-center>
              <img alt="guindaille" src="./assets/img/guindaille.png" align="middle" (click)="changePage(guindaillePage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-4  text-center >
+          <ion-col size="4"  text-center >
              <img alt="urgence" src="./assets/img/urgence.png" align="middle"  (click)="emergency()"/>
              <p align="center"><b><font color="#002D62">{{'MENU.URG' | translate}}</font></b></p>
           </ion-col>
@@ -103,61 +103,61 @@
   
   <!----------------------------------------------------------GRID FOR LANDSCAPE------------------------------------------------------------------------------->
         <ion-row class="homeML">
-          <ion-col col-3  text-center id="study">
+          <ion-col size="3"  text-center id="study">
             <img alt="etudes" src="./assets/img/studies.png" align="middle"   (click)="changePage(studiesPage)"/>
             <p align="center"><b><font color="#002D62" >{{'HOME.ETUDES' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
             <img alt="biblio" src="./assets/img/libraries.png" align="middle"  (click)="changePage(libraryPage)"/> 
             <p align="center"><b><font color="#002D62">{{'HOME.LIBRARY' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
             <img alt="aide" src="./assets/img/support.png" align="middle"   (click)="changePage(helpDeskPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.HELP' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3 text-center>
+          <ion-col size="3" text-center>
             <img alt="logo" src="./assets/img/news.png" align="middle"  (click)="changePage(newsPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.NEWS' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
         <ion-row class="homeML">
-          <ion-col col-3  text-center >
+          <ion-col size="3"  text-center >
             <img alt="louvinfo" src="./assets/img/events.png" align="middle"   (click)="changePage(eventPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.EVENTS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
             <img alt="sport" src="./assets/img/sports.png" align="middle"  (click)="changePage(sportPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.SPORTS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
             <img alt="carte" src="./assets/img/map.png" align="middle"  (click)="changePage(mapPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MAP' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
             <img alt="resto" src="./assets/img/resto.png" align="middle" (click)="changePage(restoPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.REST' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
         <ion-row class="homeML">
-          <ion-col col-3 text-center>
+          <ion-col size="3" text-center>
             <img alt="voiture" src="./assets/img/mobility.png" align="middle"  (click)="changePage(mobilityPage)"/>
             <p align="center"><b><font color="#002D62">{{'HOME.MOBILITY' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
              <img alt="param" src="./assets/img/settings.png" align="middle"  (click)="changePage(paramPage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.SETTINGS' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center>
+          <ion-col size="3"  text-center>
              <img alt="guindaille" src="./assets/img/guindaille.png" align="middle" (click)="changePage(guindaillePage)"/>
              <p align="center"><b><font color="#002D62">{{'MENU.GUINDAILLE' | translate}}</font></b></p>
           </ion-col>
-          <ion-col col-3  text-center >
+          <ion-col size="3"  text-center >
              <img alt="urgence" src="./assets/img/urgence.png" align="middle"  (click)="emergency()"/>
              <p align="center"><b><font color="#002D62">{{'MENU.URG' | translate}}</font></b></p>
           </ion-col>
         </ion-row>
         <ion-row class="ucl">
-          <ion-col col-6 offset-3 col-md-4 offset-md-4 align-self-center text-center>
+          <ion-col size="6" offset-3 col-md-4 offset-md-4 align-self-center text-center>
             <img class="five" alt="uclouvain" align="top"  src="./assets/img/uclouvain.png" (click)="openUCL('http://www.uclouvain.be')"/>
           </ion-col>
         </ion-row>
