--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -157,7 +157,7 @@
           </ion-col>
         </ion-row>
         <ion-row class="ucl">
-          <ion-col size="6" offset-3 col-md-4 offset-md-4 align-self-center text-center>
+          <ion-col size="6" offset="3" size-md offset-md align-self-center text-center>
             <img class="five" alt="uclouvain" align="top"  src="./assets/img/uclouvain.png" (click)="openUCL('http://www.uclouvain.be')"/>
           </ion-col>
         </ion-row>
