--- a/src/app/pages/studies/hebdo/hebdo.html
+++ b/src/app/pages/studies/hebdo/hebdo.html
@@ -35,10 +35,10 @@
 <!--BODY-->
 <ion-content padding #weekContent>
 <ion-list *ngFor="let day of schedule"  >
-  <ion-item-divider text-center [hidden]="day.schedule.length == 0" (click)="toggleGroup(day.date)">
+  <ion-item-divider text-center [hidden]="day.schedule.length == 0" (click)="utilsServices.toggleGroup(day.date, shownGroup)">
     {{day.day}} {{day.date}} ({{day.schedule.length}} séances)
   </ion-item-divider>
-  <ion-list *ngFor="let course of day.schedule" [hidden]="!isGroupShown(day.date)">
+  <ion-list *ngFor="let course of day.schedule" [hidden]="!utilsServices.isGroupShown(day.date, shownGroup)">
     <ion-item-sliding>
       <ion-item>
         <h2 text-center> {{course.cours}} - {{course.name}} </h2>
