--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -47,7 +47,7 @@
   <!----------------INFORMATIONS ---------------------->
   <ng-container *ngIf="segment==='info'">
 
-    <ion-item-divider  (click)="utilsServices.toggleGroup('prob_app', shownGroup)">
+    <ion-item-divider  (click)="toggleGroup('prob_app')">
       {{'HELP.PROB' | translate}}
     </ion-item-divider>
 
@@ -58,7 +58,7 @@
       </div>
     </ion-item>
 
-    <ion-item-divider  (click)="utilsServices.toggleGroup('service_desk', shownGroup)">
+    <ion-item-divider  (click)="toggleGroup('service_desk')">
       {{'HELP.DESK' | translate}}
     </ion-item-divider>
 
@@ -71,7 +71,7 @@
       </div>
     </ion-item>
 
-    <ion-item-divider  (click)="utilsServices.toggleGroup('smartcard', shownGroup)">
+    <ion-item-divider  (click)="toggleGroup('smartcard')">
       {{'HELP.CARD' | translate}}
     </ion-item-divider>
 
@@ -89,7 +89,7 @@
       </div>
     </ion-item>
 
-    <ion-item-divider  (click)="utilsServices.toggleGroup('wifi', shownGroup)">
+    <ion-item-divider  (click)="toggleGroup('wifi')">
       {{'HELP.WIFI' | translate}}
     </ion-item-divider>
 
@@ -123,7 +123,7 @@
       </div>
     </ion-item>
 
-    <ion-item-divider  (click)="utilsServices.toggleGroup('rep', shownGroup)" no-lines>
+    <ion-item-divider  (click)="toggleGroup('rep')" no-lines>
       {{'HELP.REPERTOIRE' | translate}}
     </ion-item-divider>
 
@@ -200,7 +200,7 @@
     </ion-row>
   </ion-card>
 
-  <ion-item-divider  (click)="utilsServices.toggleGroup('socfi', shownGroup)">
+  <ion-item-divider  (click)="toggleGroup('socfi')">
     <strong>{{'HELP.SOCFI' | translate}}</strong>
   </ion-item-divider>
 
@@ -229,7 +229,7 @@
     </ion-label>
   </ion-item>
 
-  <ion-item-divider  (click)="utilsServices.toggleGroup('sante', shownGroup)">
+  <ion-item-divider  (click)="toggleGroup('sante')">
     <strong>{{'HELP.SANTE' | translate}}</strong>
   </ion-item-divider>
 
@@ -257,7 +257,7 @@
     </ion-label>
   </ion-item>
 
-  <ion-item-divider  (click)="utilsServices.toggleGroup('psyped', shownGroup)">
+  <ion-item-divider  (click)="toggleGroup('psyped')">
     <strong>{{'HELP.PSYPED' | translate}}</strong>
   </ion-item-divider>
 
