--- a/src/app/pages/sports/sports-filter/sports-filter.html
+++ b/src/app/pages/sports/sports-filter/sports-filter.html
@@ -30,7 +30,7 @@
     </ion-title>
 </ion-col></ion-row>
     <ion-buttons slot="end">
-      <ion-button (click)="applyFilters()" strong>{{'SPORTS.APPLY' | translate}}</ion-button>
+      <ion-button (click)="alertService.applyFilters(categories, dateRange)" strong>{{'SPORTS.APPLY' | translate}}</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
