--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -10,98 +10,98 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  @include root-prop(--ion-color-primary, #3880ff);
+  @include root-prop(--ion-color-primary-rgb, 56, 128, 255);
+  @include root-prop(--ion-color-primary-contrast, #ffffff);
+  @include root-prop(--ion-color-primary-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-primary-shade, #3171e0);
+  @include root-prop(--ion-color-primary-tint, #4c8dff);
 
   /** secondary **/
-  --ion-color-secondary: #0cd1e8;
-  --ion-color-secondary-rgb: 12, 209, 232;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #0bb8cc;
-  --ion-color-secondary-tint: #24d6ea;
+  @include root-prop(--ion-color-secondary, #0cd1e8);
+  @include root-prop(--ion-color-secondary-rgb, 12, 209, 232);
+  @include root-prop(--ion-color-secondary-contrast, #ffffff);
+  @include root-prop(--ion-color-secondary-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-secondary-shade, #0bb8cc);
+  @include root-prop(--ion-color-secondary-tint, #24d6ea);
 
   /** tertiary **/
-  --ion-color-tertiary: #7044ff;
-  --ion-color-tertiary-rgb: 112, 68, 255;
-  --ion-color-tertiary-contrast: #ffffff;
-  --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #633ce0;
-  --ion-color-tertiary-tint: #7e57ff;
+  @include root-prop(--ion-color-tertiary, #7044ff);
+  @include root-prop(--ion-color-tertiary-rgb, 112, 68, 255);
+  @include root-prop(--ion-color-tertiary-contrast, #ffffff);
+  @include root-prop(--ion-color-tertiary-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-tertiary-shade, #633ce0);
+  @include root-prop(--ion-color-tertiary-tint, #7e57ff);
 
   /** success **/
-  --ion-color-success: #10dc60;
-  --ion-color-success-rgb: 16, 220, 96;
-  --ion-color-success-contrast: #ffffff;
-  --ion-color-success-contrast-rgb: 255, 255, 255;
-  --ion-color-success-shade: #0ec254;
-  --ion-color-success-tint: #28e070;
+  @include root-prop(--ion-color-success, #10dc60);
+  @include root-prop(--ion-color-success-rgb, 16, 220, 96);
+  @include root-prop(--ion-color-success-contrast, #ffffff);
+  @include root-prop(--ion-color-success-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-success-shade, #0ec254);
+  @include root-prop(--ion-color-success-tint, #28e070);
 
   /** warning **/
-  --ion-color-warning: #ffce00;
-  --ion-color-warning-rgb: 255, 206, 0;
-  --ion-color-warning-contrast: #ffffff;
-  --ion-color-warning-contrast-rgb: 255, 255, 255;
-  --ion-color-warning-shade: #e0b500;
-  --ion-color-warning-tint: #ffd31a;
+  @include root-prop(--ion-color-warning, #ffce00);
+  @include root-prop(--ion-color-warning-rgb, 255, 206, 0);
+  @include root-prop(--ion-color-warning-contrast, #ffffff);
+  @include root-prop(--ion-color-warning-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-warning-shade, #e0b500);
+  @include root-prop(--ion-color-warning-tint, #ffd31a);
 
   /** danger **/
-  --ion-color-danger: #f04141;
-  --ion-color-danger-rgb: 245, 61, 61;
-  --ion-color-danger-contrast: #ffffff;
-  --ion-color-danger-contrast-rgb: 255, 255, 255;
-  --ion-color-danger-shade: #d33939;
-  --ion-color-danger-tint: #f25454;
+  @include root-prop(--ion-color-danger, #f04141);
+  @include root-prop(--ion-color-danger-rgb, 245, 61, 61);
+  @include root-prop(--ion-color-danger-contrast, #ffffff);
+  @include root-prop(--ion-color-danger-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-danger-shade, #d33939);
+  @include root-prop(--ion-color-danger-tint, #f25454);
 
   /** dark **/
-  --ion-color-dark: #222428;
-  --ion-color-dark-rgb: 34, 34, 34;
-  --ion-color-dark-contrast: #ffffff;
-  --ion-color-dark-contrast-rgb: 255, 255, 255;
-  --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  @include root-prop(--ion-color-dark, #222428);
+  @include root-prop(--ion-color-dark-rgb, 34, 34, 34);
+  @include root-prop(--ion-color-dark-contrast, #ffffff);
+  @include root-prop(--ion-color-dark-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-dark-shade, #1e2023);
+  @include root-prop(--ion-color-dark-tint, #383a3e);
 
   /** medium **/
-  --ion-color-medium: #989aa2;
-  --ion-color-medium-rgb: 152, 154, 162;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: #86888f;
-  --ion-color-medium-tint: #a2a4ab;
+  @include root-prop(--ion-color-medium, #989aa2);
+  @include root-prop(--ion-color-medium-rgb, 152, 154, 162);
+  @include root-prop(--ion-color-medium-contrast, #ffffff);
+  @include root-prop(--ion-color-medium-contrast-rgb, 255, 255, 255);
+  @include root-prop(--ion-color-medium-shade, #86888f);
+  @include root-prop(--ion-color-medium-tint, #a2a4ab);
 
   /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 244, 244;
-  --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  @include root-prop(--ion-color-light, #f4f5f8);
+  @include root-prop(--ion-color-light-rgb, 244, 244, 244);
+  @include root-prop(--ion-color-light-contrast, #000000);
+  @include root-prop(--ion-color-light-contrast-rgb, 0, 0, 0);
+  @include root-prop(--ion-color-light-shade, #d7d8da);
+  @include root-prop(--ion-color-light-tint, #f5f6f9);
 
-  --ion-color-primary: #488aff;
-  --ion-color-danger:     #f53d3d;
-  --ion-color-guindaille: #dd156c;
-  --ion-color-navbarColor: #009688;
-  --ion-color-news:#c10a27;
-  --ion-color-event:#ec690c;
-  --ion-color-sport:#f59d22;
-  --ion-color-g2: #e62175;
-  --ion-color-cred: #b3b3b3;
-  --ion-color-bibli: #0071bc;
-  --ion-color-etudes: #2e3192;
-  --ion-color-support: #8d92c8;
-  --ion-color-ucl: #002e5f;
-  --ion-color-setting: #4d4d4d;
-  --ion-color-map: #00a99d;
-  --ion-color-resto: #8cc63f;
-  --ion-color-mobilite: #006837;
-  --ion-color-urg: #ec1c24;
-  --ion-color-fun: #93278f;
-  --ion-color-uclouvain: rgb(0,33,78);
-  --ion-color-home: #002A6A;
+  @include root-prop(--ion-color-primary, #488aff);
+  @include root-prop(--ion-color-danger,     #f53d3d);
+  @include root-prop(--ion-color-guindaille, #dd156c);
+  @include root-prop(--ion-color-navbarColor, #009688);
+  @include root-prop(--ion-color-news,#c10a27);
+  @include root-prop(--ion-color-event,#ec690c);
+  @include root-prop(--ion-color-sport,#f59d22);
+  @include root-prop(--ion-color-g2, #e62175);
+  @include root-prop(--ion-color-cred, #b3b3b3);
+  @include root-prop(--ion-color-bibli, #0071bc);
+  @include root-prop(--ion-color-etudes, #2e3192);
+  @include root-prop(--ion-color-support, #8d92c8);
+  @include root-prop(--ion-color-ucl, #002e5f);
+  @include root-prop(--ion-color-setting, #4d4d4d);
+  @include root-prop(--ion-color-map, #00a99d);
+  @include root-prop(--ion-color-resto, #8cc63f);
+  @include root-prop(--ion-color-mobilite, #006837);
+  @include root-prop(--ion-color-urg, #ec1c24);
+  @include root-prop(--ion-color-fun, #93278f);
+  @include root-prop(--ion-color-uclouvain, rgb(0,33,78));
+  @include root-prop(--ion-color-home, #002A6A);
 }
 
 $customColors: ('guindaille', 'navbarColor', 'news', 'event', 'sport', 'g2', 'cred', 'bibli', 'etudes', 'support', 'ucl', 'setting', 'map', 'resto', 'mobilite', 'urg', 'fun', 'uclouvain', 'home');
