--- a/src/app/pages/events/events.html
+++ b/src/app/pages/events/events.html
@@ -22,15 +22,15 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="event">
-      <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
-          <img src="./assets/img/s.png" height="28"/>
-        </ion-buttons>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28" />
+    </ion-buttons>
 
     <ion-title horizontal="center">{{title | translate}}</ion-title>
     <ion-buttons *ngIf="segment==='all'" slot="end">
       <ion-button (click)="presentFilter()">
-        <ion-icon  name="options"></ion-icon>
+        <ion-icon name="options"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -47,50 +47,51 @@
 <!--BODY-->
 <ion-content class="feed-list">
   <ion-refresher *ngIf="segment !== 'favorites'" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content
-      pullingIcon="arrow-dropdown"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles">
+    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles">
     </ion-refresher-content>
   </ion-refresher>
   <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl"></ion-searchbar>
 
-  <ion-list #eventsList *ngFor="let item of displayedEventsD"  [hidden]="shownEvents === 0">
+  <ion-list #eventsList *ngFor="let week of displayedEventsD" [hidden]="shownEvents === 0">
 
-    <ion-item-divider *ngIf="item.event.length > 0" (click)="toggleGroup(item.weeks)">
-        <ion-label style="width: 100%;" text-center> [{{getRangeWeek(item.weeks,year).from | date: 'dd/MM'}} &mdash; {{getRangeWeek(item.weeks,year).to | date: 'dd/MM'}}] ({{item.event.length}}) </ion-label>
+    <ion-item-divider *ngIf="week.items.length > 0" (click)="toggleGroup(week.label)">
+      <ion-label style="width: 100%;" text-center> [{{getRangeWeek(week.label,year).from | date: 'dd/MM'}} &mdash;
+        {{getRangeWeek(week.label,year).to | date: 'dd/MM'}}] ({{week.items.length}}) </ion-label>
     </ion-item-divider>
 
-    <ion-item-sliding #slidingItem *ngFor="let event of item.event" [hidden]="!utilsServices.isGroupShown(item.weeks, shownGroup) || event.hidden">
-        <ion-item button (click)="goToEventDetail(event)" >
-          <ion-thumbnail item-left>
-            <img [src]="event.iconCategory">
-          </ion-thumbnail>
-          &nbsp;
-            <ion-label>
-            <h3>{{event.title}}</h3>{{event.guid}}
-            <p [innerHtml]="event.trimmedDescription"></p>
-            <p [innerHtml]="event.location"></p>
-            <p>
-                <ion-icon slot="start" name="calendar"></ion-icon>
-              {{event.startDate | date: 'dd/MM/yyyy H:mm' }} &mdash; {{event.endDate | date: 'dd/MM/yyyy H:mm' }}</p>
-          </ion-label>
-        </ion-item>
+    <ion-item-sliding #slidingItem *ngFor="let event of week.items"
+      [hidden]="!utilsServices.isGroupShown(week.label, shownGroup) || event.hidden">
+      <ion-item button (click)="goToEventDetail(event)">
+        <ion-thumbnail item-left>
+          <img [src]="event.iconCategory">
+        </ion-thumbnail>
+        &nbsp;
+        <ion-label>
+          <h3>{{event.title}}</h3>{{event.guid}}
+          <p [innerHtml]="event.trimmedDescription"></p>
+          <p [innerHtml]="event.location"></p>
+          <p>
+            <ion-icon slot="start" name="calendar"></ion-icon>
+            {{event.startDate | date: 'dd/MM/yyyy H:mm' }} &mdash; {{event.endDate | date: 'dd/MM/yyyy H:mm' }}
+          </p>
+        </ion-label>
+      </ion-item>
 
-        <ion-item-options>
-          <ion-item-option fill="outline" (click)="createEvent(slidingItem, event)">
-            <ion-icon size="large" name='calendar'></ion-icon>
-          </ion-item-option>
+      <ion-item-options>
+        <ion-item-option fill="outline" (click)="createEvent(slidingItem, event)">
+          <ion-icon size="large" name='calendar'></ion-icon>
+        </ion-item-option>
 
-          <ion-item-option fill="outline" (click)="addFavorite(slidingItem, event)" *ngIf="segment === 'all'">
-            <ion-icon size="large" name="star-outline"></ion-icon>
-          </ion-item-option>
+        <ion-item-option fill="outline" (click)="addFavorite(slidingItem, event)" *ngIf="segment === 'all'">
+          <ion-icon size="large" name="star-outline"></ion-icon>
+        </ion-item-option>
 
-          <ion-item-option (click)="removeFavorite(slidingItem, event, 'Remove Favorite')" *ngIf="segment === 'favorites'">
-            <ion-icon size="large" name='close'></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-      </ion-item-sliding>
+        <ion-item-option (click)="removeFavorite(slidingItem, event, 'Remove Favorite')"
+          *ngIf="segment === 'favorites'">
+          <ion-icon size="large" name='close'></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
+    </ion-item-sliding>
   </ion-list>
 
   <ion-list-header *ngIf="(noevents && !searching)">
@@ -99,5 +100,6 @@
 </ion-content>
 
 <ion-footer text-center *ngIf="segment=='all'">
-  <ion-icon name='help-circle'></ion-icon><p>{{'EVENTS.SWIPE' | translate}}</p>
+  <ion-icon name='help-circle'></ion-icon>
+  <p>{{'EVENTS.SWIPE' | translate}}</p>
 </ion-footer>
