--- a/src/app/pages/sports/sports.html
+++ b/src/app/pages/sports/sports.html
@@ -21,26 +21,26 @@
 <!--EN-TETE-->
 <ion-header>
   <ion-toolbar color="sport">
-      <ion-buttons slot="start">
-          <ion-back-button></ion-back-button>
-          <img src="./assets/img/s.png" height="28"/>
-        </ion-buttons>
-    <ion-title horizontal="center"><img alt="logo" height="40" src="./assets/img/logoSport.png" ></ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+      <img src="./assets/img/s.png" height="28" />
+    </ion-buttons>
+    <ion-title horizontal="center"><img alt="logo" height="40" src="./assets/img/logoSport.png"></ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="presentFilter()">
         <ion-icon name="options"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-segment [(ngModel)]="segment" name="segment" (ionChange)="updateDisplayed()" >
+  <ion-segment [(ngModel)]="segment" name="segment" (ionChange)="updateDisplayed()">
     <ion-segment-button value="all" style="color: white;">
       <ion-label>{{'SPORTS.ALL' | translate}}</ion-label>
     </ion-segment-button>
     <ion-segment-button value="team" style="color: white;">
-        <ion-label>{{'SPORTS.TEAM' | translate}}</ion-label>
+      <ion-label>{{'SPORTS.TEAM' | translate}}</ion-label>
     </ion-segment-button>
     <ion-segment-button value="favorites" style="color: white;">
-        <ion-label>{{'SPORTS.FAV' | translate}}</ion-label>
+      <ion-label>{{'SPORTS.FAV' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
 </ion-header>
@@ -49,50 +49,54 @@
 <!--class="feed-list" -->
 <ion-content class="all" [ngClass]="{'team' : segment == 'team'}">
   <ion-refresher *ngIf="segment !== 'favorites'" (ionRefresh)="doRefresh($event)">
-    <ion-refresher-content
-      pullingIcon="arrow-dropdown"
-      pullingText="Pull to refresh"
-      refreshingSpinner="circles">
+    <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles">
     </ion-refresher-content>
   </ion-refresher>
-  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" ></ion-searchbar>
+  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl"></ion-searchbar>
 
-  <ion-list #sportsList *ngFor="let item of displayedSportsD"  [hidden]="shownSports === 0" >
-        <ion-item-divider *ngIf="item.name.length > 0" (click)="toggleGroup(item.jour)" text-center class="all" [ngClass]="{'team' : segment == 'team'}">
-            <ion-label style="width: 100%;" text-center> {{item.jour}} {{item.name[0].date | date: 'dd/MM'}} ({{item.name.length}}) </ion-label>
-        </ion-item-divider>
+  <ion-list #sportsList *ngFor="let jour of displayedSportsD" [hidden]="shownSports === 0">
+    <ion-item-divider *ngIf="jour.items.length > 0" (click)="toggleGroup(jour.label)" text-center class="all"
+      [ngClass]="{'team' : segment == 'team'}">
+      <ion-label style="width: 100%;" text-center> {{jour.label}} {{jour.items[0].date | date: 'dd/MM'}}
+        ({{jour.items.length}}) </ion-label>
+    </ion-item-divider>
 
-        <ion-item-sliding #slidingItem *ngFor="let sport of item.name" [hidden]="!utilsServices.isGroupShown(item.jour, shownGroup) || sport.hidden">
-            <ion-item text-center class="all" [ngClass]="{'team' : segment == 'team'}">
-              <ion-label>
-              <h3>{{sport.sport}} {{sport.sexe}}  {{sport.type}}</h3>
-              <p class="text">{{sport.lieu}} - Salle : {{sport.salle}}</p>
-              <p class="text">
-                  <ion-icon slot="start" name="calendar"></ion-icon>
-                  {{sport.jour}} {{sport.date | date: 'dd/MM/yyyy' }} {{sport.date | date : 'H:mm' }} &mdash; {{sport.hfin | date : 'H:mm'}}</p>
-              <p style="color:red;" *ngIf="sport.online==1">{{'SPORTS.ONLINE' | translate}}</p>
-              <p style="color:red;" *ngIf="sport.remarque.length > 2">{{'SPORTS.NOTE' | translate}} : {{sport.remarque}}</p>
-              <p style="color:red;" *ngIf="sport.active==0">{{'SPORTS.ANNULE' | translate}}</p>
-            </ion-label>
-            </ion-item>
+    <ion-item-sliding #slidingItem *ngFor="let sport of jour.items"
+      [hidden]="!utilsServices.isGroupShown(jour.label, shownGroup) || sport.hidden">
+      <ion-item text-center class="all" [ngClass]="{'team' : segment == 'team'}">
+        <ion-label>
+          <h3>{{sport.sport}} {{sport.sexe}} {{sport.type}}</h3>
+          <p class="text">{{sport.lieu}} - Salle : {{sport.salle}}</p>
+          <p class="text">
+            <ion-icon slot="start" name="calendar"></ion-icon>
+            {{sport.jour}} {{sport.date | date: 'dd/MM/yyyy' }} {{sport.date | date : 'H:mm' }} &mdash;
+            {{sport.hfin | date : 'H:mm'}}
+          </p>
+          <p style="color:red;" *ngIf="sport.online==1">{{'SPORTS.ONLINE' | translate}}</p>
+          <p style="color:red;" *ngIf="sport.remarque.length > 2">{{'SPORTS.NOTE' | translate}} : {{sport.remarque}}</p>
+          <p style="color:red;" *ngIf="sport.active==0">{{'SPORTS.ANNULE' | translate}}</p>
+        </ion-label>
+      </ion-item>
 
-            <ion-item-options side="end">
-              <ion-item-option (click)="addToCalendar(slidingItem, sport)" class="large-icon">
-                <ion-icon size="large" name='calendar'></ion-icon>
-              </ion-item-option>
-              <ion-item-option (click)="addFavorite(slidingItem, sport)" *ngIf="segment === 'all' || segment === 'team'">
-                <ion-icon size="large" name="star-outline"></ion-icon>
-              </ion-item-option>
-              <ion-item-option (click)="removeFavorite(slidingItem, sport, 'Remove Favorite')" *ngIf="segment === 'favorites'">
-                <ion-icon size="large" name='close'></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
+      <ion-item-options side="end">
+        <ion-item-option (click)="addToCalendar(slidingItem, sport)" class="large-icon">
+          <ion-icon size="large" name='calendar'></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="addFavorite(slidingItem, sport)" *ngIf="segment === 'all' || segment === 'team'">
+          <ion-icon size="large" name="star-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="removeFavorite(slidingItem, sport, 'Remove Favorite')"
+          *ngIf="segment === 'favorites'">
+          <ion-icon size="large" name='close'></ion-icon>
+        </ion-item-option>
+      </ion-item-options>
 
-          </ion-item-sliding>
+    </ion-item-sliding>
 
-    </ion-list>
+  </ion-list>
 
-  <ion-list-header *ngIf="((nosport && segment === 'all') || (noteams && segment === 'team')) && !searching" class="all" [ngClass]="{'team' : segment == 'team'}">
+  <ion-list-header *ngIf="((nosport && segment === 'all') || (noteams && segment === 'team')) && !searching" class="all"
+    [ngClass]="{'team' : segment == 'team'}">
     {{'SPORTS.NOTHING' | translate}}
   </ion-list-header>
 </ion-content>
