--- a/src/app/pages/events/events-filter/events-filter.html
+++ b/src/app/pages/events/events-filter/events-filter.html
@@ -22,7 +22,8 @@
 <ion-header>
   <ion-toolbar id="header" class="header">
     <ion-buttons slot="start">
-      <ion-button (click)="dismiss()">{{'EVENTS.CANCEL' | translate}}</ion-button>
+      <ion-button (click)="alertService.applyFilters(categories, dateRange)">{{'EVENTS.CANCEL' | translate}}
+      </ion-button>
     </ion-buttons>
     <ion-row>
       <ion-col>
